# incubator-gluten

./: .gitignore  .gitlab-ci.yml
backends-velox/: pom.xml
backends-velox/src/main/scala/org/apache/gluten/backendsapi/velox/: VeloxListenerApi.scala
cpp/: CMakeLists.txt
cpp/core/: CMakeLists.txt
cpp/core/config/: GlutenConfig.h
cpp/cpp_rust_interop/: CMakeLists.txt  bridge.cc  bridge.h
cpp/velox/: CMakeLists.txt
cpp/velox/compute/: VeloxBackend.cc  WholeStageResultIterator.cc
cpp/velox/operators/dpextensions/: BatchDownsizer.h  Fusion.h  IO.h  Nodes.h  Operators.h  Translators.h
cpp/velox/operators/plannodes/: DPFilter.h
cpp/velox/substrait/: DPToVeloxPlanExtension.cc  DPToVeloxPlanExtension.h  SubstraitParser.cc  SubstraitParser.h  SubstraitToVeloxExpr.h  SubstraitToVeloxPlan.cc  SubstraitToVeloxPlan.h  VariantToVectorConverter.cc  VariantToVectorConverter.h
dev/: build_gluten_cpp.sh  builddeps-veloxbe_not_get.sh
ep/build-velox/src/: dp_modify_velox.patch  get_velox.sh
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
shims/common/src/main/scala/org/apache/gluten/: GlutenConfig.scala
